# obsidian_knittr_py

./: .gitignore  .pre-commit-config.yaml  DynamicArguments.ini  MANIFEST.in  README.md  obsidian_knittr_py.py  pyproject.toml  requirements.txt  setup.py
assets/: DynamicArguments.ini  pipeline.yml
modules/: DynamicArguments.py  logging.py
obsidianknittrpy/: __init__.py  __main__.py  main.py  requirements.txt
obsidianknittrpy/modules/: ConfigurationHandler.py  DynamicArguments.py  ObsidianHTML.py  command_handlers.py  commandline.py  guis.py  logging.py  utility.py  vault_limiter.py
obsidianknittrpy/modules/core/: ConfigurationHandler.py  CustomModuleHandler.py  ExtensionHandler.py  ExternalHandler.py  ResourceLogger.py  resource_logger.py
obsidianknittrpy/modules/guis/: AboutInfo.py  DynamicArguments.py  guis.py
obsidianknittrpy/modules/obsidian_html/: ObsidianHTML.py  ObsidianHTML_Limiter.py
obsidianknittrpy/modules/processing/: README.md  convert_diagrams.py  convert_obsidianhtml_image_srcs.py  general_processing.py  obsidianhtml_modules.py  processing_module_runner.py  purge_contents.py  quarto_modules.py
obsidianknittrpy/modules/rendering/: YamlHandler.py  file_strings.py  renderer.py  renderer_v2.py
obsidianknittrpy/modules/utils/: dynamic_loader.py
scripts/: write_module_docstrings.py
